# RangeDet

./: .gitignore  INSTALL.md  README.md  requirements.txt  setup.py
config/rangedet/: rangedet_ped_wo_aug_4_18e.py  rangedet_ped_wo_aug_all_36e.py  rangedet_veh_wo_aug_4_18e.py  rangedet_wo_aug_all_36e.py
datasets/: create_range_image_in_kitti.py  create_range_image_roidb.py
datasets/kitti_utils/: __init__.py  calibration_kitti.py
mxnext/: __init__.py  complicate.py  initializer.py  simple.py
operator_cxx/contrib/: Makefile  decode_3d_bbox-inl.h  decode_3d_bbox.cc  decode_3d_bbox.cu  nms_3d-inl.h  nms_3d.cc  nms_3d.cu  rotated_iou-inl.h  rotated_iou.cc  rotated_iou.cu
operator_cxx/src_cxx/: CMakeLists.txt  assigner.h  nms.h  overlap.h  pybinding.cpp  setup.py
operator_py/: batch_rotated_iou.py  get_sorted_foreground.py
pybind_cxx/: assigner.cpp
rangedet/core/: detection_metric.py  input.py  util_func.py
rangedet/symbol/backbone/: dla_backbone.py  meta_kernel.py
rangedet/symbol/head/: builder.py  loss.py
scripts/: horovodrun.sh  train_rangedet.sh
tools/: create_prediction_bin_3d.py  test.py  train.py
utils/: callback.py  cpu_affinity.py  detection_input.py  detection_module.py  load_model.py  local_sync.py  logger.py  lr_scheduler.py  memonger_v2.py  train_utils.py
